<resources>
    <string name="app_name">New Application</string>
    <string name="previous">Previous</string>
    <string name="highscore">highscore</string>
    <string name="score">score</string>
    <string name="question">question</string>
    <string name="button1">button1</string>
    <string name="button2">button2</string>
    <string name="button3">button3</string>
    <string name="button4">button4</string>
</resources>