<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/highscore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="646dp"
        android:gravity="center"
        android:text="@string/highscore"
        android:textAlignment="center"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/previous"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="112dp"
        android:layout_marginBottom="572dp"
        android:gravity="center"
        android:text="@string/previous"
        android:textAlignment="center"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/score"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="184dp"
        android:layout_marginBottom="507dp"
        android:gravity="center"
        android:text="@string/score"
        android:textAlignment="center"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ques"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="282dp"
        android:layout_marginBottom="402dp"
        android:gravity="center"
        android:text="@string/question"
        android:textAlignment="center"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="402dp"
        android:layout_marginBottom="269dp"
        android:gravity="center"
        android:text="@string/button1"
        android:textAlignment="center"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textSize="30sp"
        app:backgroundTint="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="471dp"
        android:layout_marginBottom="200dp"
        android:gravity="center"
        android:text="@string/button2"
        android:textAlignment="center"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textSize="30sp"
        app:backgroundTint="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="539dp"
        android:layout_marginBottom="132dp"
        android:gravity="center"
        android:text="@string/button3"
        android:textAlignment="center"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textSize="30sp"
        app:backgroundTint="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="610dp"
        android:layout_marginBottom="61dp"
        android:gravity="center"
        android:text="@string/button4"
        android:textAlignment="center"
        android:textColor="@color/material_on_background_emphasis_high_type"
        android:textSize="30sp"
        app:backgroundTint="#F44336"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>